improve: demo pages UI and add customize from showcases

--- a/projects/demo/src/app/pages/home/home.html
+++ b/projects/demo/src/app/pages/home/home.html
@@ -9,8 +9,8 @@
 			</div>
 
 			<div class="cta-buttons">
-				<a routerLink="/builder" class="btn-primary">
-					🎨 Try Builder
+				<a routerLink="/playground" class="btn-primary">
+					🎨 Try the Playground
 				</a>
 				<a routerLink="/showcases" class="btn-secondary">
 					👀 View Showcases
@@ -101,6 +101,9 @@
 			<p>
 				Built with ❤️ for the Angular community by 
 				<a href="https://github.com/craftedcode-dev" target="_blank" rel="noopener">craftedcode-dev</a>
+			</p>
+			<p class="license">
+				Released under the <a href="https://github.com/craftedcode-dev/ngx-analog-clock/blob/main/LICENSE" target="_blank" rel="noopener">MIT License</a>
 			</p>
 		</div>
 	</section>
