--- a/projects/demo/src/app/pages/home/home.scss
+++ b/projects/demo/src/app/pages/home/home.scss
@@ -355,5 +355,15 @@
 				}
 			}
 		}
+
+		.license {
+			font-size: 14px;
+			opacity: 0.7;
+			margin-top: 8px;
+
+			a {
+				color: #60a5fa;
+			}
+		}
 	}
 }
