feat: Add dots markers, lines-numbers and dots-numbers modes (v1.1.0)

--- a/projects/demo/src/app/pages/playground/playground.html
+++ b/projects/demo/src/app/pages/playground/playground.html
@@ -187,23 +187,25 @@
 							(ngModelChange)="updateConfig()">
 							<option value="lines">Lines</option>
 							<option value="numbers">Numbers</option>
-							<option value="both">Both</option>
+							<option value="dots">Dots</option>
+							<option value="lines-numbers">Lines + Numbers</option>
+							<option value="dots-numbers">Dots + Numbers</option>
 							<option value="none">None</option>
 						</select>
 					</label>
 
-					<label *ngIf="markers === 'numbers' || markers === 'both'">
+					<label *ngIf="markers === 'numbers' || markers === 'lines-numbers' || markers === 'dots-numbers'">
 						<span>Number Style</span>
 						<select 
 							[(ngModel)]="numberStyle"
 							(ngModelChange)="updateConfig()">
-							<option value="standard">Standard (1-12)</option>
+							<option value="arabic">Arabic (1-12)</option>
 							<option value="roman">Roman (I-XII)</option>
 						</select>
 					</label>
 
-					<label *ngIf="markers === 'lines' || markers === 'both'">
-						<span>Hour Marker Width</span>
+					<label *ngIf="markers === 'lines' || markers === 'lines-numbers' || markers === 'dots' || markers === 'dots-numbers'">
+						<span>Hour Marker Size</span>
 						<input 
 							type="range" 
 							min="1" 
@@ -214,19 +216,20 @@
 						<span class="value">{{hourMarkerWidth}}</span>
 					</label>
 
-					<label *ngIf="markers === 'lines' || markers === 'both'">
-						<span>Minute Marker Width</span>
+					<label *ngIf="markers === 'lines' || markers === 'lines-numbers' || markers === 'dots' || markers === 'dots-numbers'">
+						<span>Minute Marker Size</span>
 						<input 
 							type="range" 
 							min="0" 
 							max="5" 
+							step="0.5"
 							[(ngModel)]="minuteMarkerWidth"
 							(input)="onRangeInput($event)"
 							(ngModelChange)="updateConfig()">
 						<span class="value">{{minuteMarkerWidth}}</span>
 					</label>
 
-					<label *ngIf="markers === 'numbers' || markers === 'both'">
+					<label *ngIf="markers === 'numbers' || markers === 'lines-numbers' || markers === 'dots-numbers'">
 						<span>Number Size</span>
 						<input 
 							type="range" 
@@ -238,7 +241,7 @@
 						<span class="value">{{numberSize}}</span>
 					</label>
 
-					<label *ngIf="markers === 'numbers' || markers === 'both'">
+					<label *ngIf="markers === 'numbers' || markers === 'lines-numbers' || markers === 'dots-numbers'">
 						<span>Number Weight</span>
 						<select 
 							[(ngModel)]="numberWeight"
