--- a/projects/demo/src/app/pages/docs/docs.scss
+++ b/projects/demo/src/app/pages/docs/docs.scss
@@ -211,19 +211,19 @@
       letter-spacing: 0.5px;
 
       &:first-child {
-        width: 25%;
+        width: 22%;  /* Property */
       }
 
       &:nth-child(2) {
-        width: 20%;
+        width: 26%;  /* Type - povećano */
       }
 
       &:nth-child(3) {
-        width: 15%;
+        width: 13%;  /* Default */
       }
 
       &:nth-child(4) {
-        width: 40%;
+        width: 39%;  /* Description */
       }
     }
   }
@@ -257,6 +257,12 @@
 
           &.type {
             color: #6d28d9;
+            /* Dozvoli prelamanje dugačkih tipova */
+            white-space: normal;
+            word-break: break-word;
+            display: inline-block;
+            max-width: 100%;
+            line-height: 1.5;
           }
 
           &.default {
