--- a/projects/demo/src/app/pages/home/home.scss
+++ b/projects/demo/src/app/pages/home/home.scss
@@ -83,10 +83,11 @@
 			cursor: pointer;
 			font-size: 18px;
 			transition: all 0.2s;
+			color: #fff;
 
 			&:hover {
-			background: rgba(255, 255, 255, 0.3);
-			transform: scale(1.1);
+				background: rgba(255, 255, 255, 0.3);
+				transform: scale(1.1);
 			}
 		}
 	}
